kube/bchchile-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: bchchile
  namespace: default
spec:
  ports:
    - port: 142
      targetPort: 80
  selector:
    service: bchchile
  type: NodePort
