kube/bchchile-ingress-tls.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bchchile-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - www.bchchile.com
    - bchchile.com
    - www.bchchile.cl
    - bchchile.cl
    secretName: bchchile-tls
  backend:
    serviceName: bchchile
    servicePort: 90
  rules:
  - host: bchchile.com
    http:
      paths:
      - path: /
        backend:
          serviceName: bchchile
          servicePort: 90
  - host: www.bchchile.com
    http:
      paths:
      - path: /
        backend:
          serviceName: bchchile
          servicePort: 90
  - host: bchchile.cl
    http:
      paths:
      - path: /
        backend:
          serviceName: bchchile
          servicePort: 90
  - host: www.bchchile.cl
    http:
      paths:
      - path: /
        backend:
          serviceName: bchchile
          servicePort: 90
